--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Prejudices -- Juvenile fiction'
 - !lcsh 'China -- Description and travel -- Juvenile fiction'
 - !lcsh 'Conduct of life -- Juvenile fiction'
+- GITenberg
 title: 'The Blue Dragon: A Tale of Recent Adventure in China'
 url: http://www.gutenberg.org/ebooks/42886
